[package]
name = "riostu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
zip = "0.6.6"

[dependencies]
smol = "2.0.0"
isahc = "1.7.2"
thiserror = "1.0.56"

[patch.crates-io.zip]
git = "https://github.com/haxsam/zip-rs"
branch = "fix_slow_cdes_read"

[[bench]]
name = "riostu_bench"
harness = false
